--- a/AUTH_MODULE/src/main/resources/templates/home.html
+++ b/AUTH_MODULE/src/main/resources/templates/home.html
@@ -45,7 +45,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-                    Welcome, <span ></span>!
+                    Welcome, <span th:text="${name}"></span>!
                 </div>
                 <div class="card-body">
                     <p class="card-text">You are now logged in using OAuth2.</p>
